# evo_armagedon

./: .gitignore  CML.py  CML_B.py  CML_C.py  Dockerfile  EvoControlCenter.py  EvolucniOptimalizace_maximalni.py  PetrPan39@gmail.com-token.json  README.md  api_server.py  auth.py  config_panel.html  env.template  evo_config.json  evo_core.py  evo_logic.py  evo_logic_poromo.py  gitignore  gui_server.py  ilama_memory.json  jazykova_matematika.py  main.py  openai_client.py  pyproject.toml  quickstar_connect.py  requirements.txt  setup.bat  start_evo.bat  update.bat
